Data-Engineering/04_Airflow_AWS/logs/dag_id=final_project/run_id=manual__2024-02-17T13:58:09.100590+00:00/task_id=Stage_events/attempt=1.log
[2024-02-17T13:58:11.052+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: final_project.Stage_events manual__2024-02-17T13:58:09.100590+00:00 [queued]>
[2024-02-17T13:58:11.056+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: final_project.Stage_events manual__2024-02-17T13:58:09.100590+00:00 [queued]>
[2024-02-17T13:58:11.056+0000] {taskinstance.py:2171} INFO - Starting attempt 1 of 1
[2024-02-17T13:58:11.062+0000] {taskinstance.py:2192} INFO - Executing <Task(StageToRedshiftOperator): Stage_events> on 2024-02-17 13:58:09.100590+00:00
[2024-02-17T13:58:11.066+0000] {standard_task_runner.py:60} INFO - Started process 16378 to run task
[2024-02-17T13:58:11.068+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'final_project', 'Stage_events', 'manual__2024-02-17T13:58:09.100590+00:00', '--job-id', '21', '--raw', '--subdir', 'DAGS_FOLDER/final_project.py', '--cfg-path', '/tmp/tmp9_5o9bpl']
[2024-02-17T13:58:11.070+0000] {standard_task_runner.py:88} INFO - Job 21: Subtask Stage_events
[2024-02-17T13:58:11.094+0000] {task_command.py:423} INFO - Running <TaskInstance: final_project.Stage_events manual__2024-02-17T13:58:09.100590+00:00 [running]> on host 6b28116ad14a
[2024-02-17T13:58:11.127+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='udacity' AIRFLOW_CTX_DAG_ID='final_project' AIRFLOW_CTX_TASK_ID='Stage_events' AIRFLOW_CTX_EXECUTION_DATE='2024-02-17T13:58:09.100590+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-02-17T13:58:09.100590+00:00'
[2024-02-17T13:58:11.134+0000] {base.py:83} INFO - Using connection ID 'aws_credentials' for task execution.
[2024-02-17T13:58:11.134+0000] {connection_wrapper.py:378} INFO - AWS Connection (conn_id='aws_credentials', conn_type='aws') credentials retrieved from login and password.
[2024-02-17T13:58:11.140+0000] {stage_redshift.py:48} INFO - Drop table staging.staging_events from destination Redshift table
[2024-02-17T13:58:11.143+0000] {base.py:83} INFO - Using connection ID 'redshift' for task execution.
[2024-02-17T13:58:13.911+0000] {sql.py:432} INFO - Running statement: Drop staging.staging_events if exists, parameters: None
[2024-02-17T13:58:35.630+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/opt/airflow/plugins/custom_operators/stage_redshift.py", line 49, in execute
    redshift.run(f"Drop {self.schema}.{self.table} if exists")
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "staging"
LINE 1: Drop staging.staging_events if exists
             ^

[2024-02-17T13:58:35.638+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=final_project, task_id=Stage_events, execution_date=20240217T135809, start_date=20240217T135811, end_date=20240217T135835
[2024-02-17T13:58:35.646+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 21 for task Stage_events (syntax error at or near "staging"
LINE 1: Drop staging.staging_events if exists
             ^
; 16378)
[2024-02-17T13:58:35.660+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-17T13:58:35.670+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
